tests/build/fail/widget_new/missing_arg1.stderr
error[E0061]: this function takes 2 arguments but 1 argument was supplied
 --> $DIR/missing_arg1.rs:7:9
  |
7 |         background_gradient = 0.deg(), ;
  |         ^^^^^^^^^^^^^^^^^^^   ------- supplied 1 argument
  |         |
  |         expected 2 arguments
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
